Fix: added missing scrollbar colors for monokai_pro

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -118,8 +118,8 @@
     --background-rgb: 45, 42, 46;
     --nav-background-rgb: 34, 31, 34;
 
-    --scrollbar-track-color: 22, 23, 29;
-    --scrollbar-thumb-color: 248, 248, 242;
+    --scrollbar-track-color: 29, 32, 33;
+    --scrollbar-thumb-color: 252, 252, 250;
 
     --text-muted: #696769;
     --muted-rgb: 105, 103, 105;
